@@ -1,0 +1,1 @@
+usr/lib/@DEB_HOST_MULTIARCH@/libclang-3.3.so.1 usr/lib/llvm-3.3/lib/libclang.so.1
