@@ -2,6 +2,8 @@ llvm-toolchain-3.3 (1:3.3-12) UNRELEASED; urgency=low
 
   * Update of the clang descriptions (Closes: #727684)
   * The package wasn't cleaned correctly (Closes: #722155)
+  * Bring back /usr/lib/llvm-3.3/lib/libclang.so (libclang-3.3-dev) and
+    /usr/lib/llvm-3.3/lib/libclang.so.1 (libclang1-3.3)
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 29 Oct 2013 13:49:59 +0100
 
